--- a/css/main.css
+++ b/css/main.css
@@ -1,180 +1,225 @@
-                body {
-                    position: absolute;
-                    margin: 0;
-                }
-                
-                .hero-bg {
-                    background-color: #C7DDEA;
-                    position: absolute;
-                    width: 375px;
-                    height: 724px;
-                    padding-top: 20px;
-                }
-                
-                .bg2 {
-                    position: absolute;
-                    width: 342px;
-                    height: 334px;
-                    padding: 390px 15px 0px 18px;
-                }
-                
-                .test {
-                    /* We´ve got you Covered. */
-                    position: absolute;
-                    width: 343px;
-                    height: 101px;
-                    font-family: Frank Ruhl Libre;
-                    font-style: normal;
-                    font-weight: 900;
-                    font-size: 45px;
-                    line-height: 100%;
-                    /* or 45px */
-                    letter-spacing: -0.02em;
-                    color: #000000;
-                    padding: 71px 15px 552px 17px;
-                    border-radius: nullpx;
-                    margin: 0;
-                }
-                
-                .para {
-                    position: absolute;
-                    width: 343px;
-                    height: 103px;
-                    font-family: Fira Sans;
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 14px;
-                    line-height: 24px;
-                    padding: 186px 15px 435px 17px;
-                    color: rgba(0, 0, 0, 0.6);
-                }
-                
-                .btn {
-                    position: absolute;
-                    width: 101px;
-                    height: 30px;
-                    font-family: Fira Sans;
-                    font-style: normal;
-                    font-weight: bold;
-                    font-size: 10px;
-                    line-height: 12px;
-                    display: flex;
-                    align-items: center;
-                    text-align: center;
-                    color: rgba(0, 0, 0, 0.8);
-                    position: absolute;
-                    width: 131px;
-                    height: 39px;
-                    background: #FFFFFF;
-                    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
-                    border-radius: 100px;
-                    margin: 302px 227px 382px 17px;
-                    border-style: none;
-                }
-                
-                .test3 {
-                    color: white;
-                }
-                
-                .learn {
-                    position: absolute;
-                    width: 375px;
-                    height: 315px;
-                    left: 0px;
-                    top: 724px;
-                    background: #F17949;
-                }
-                
-                .learn-more {
-                    font-family: Frank Ruhl Libre;
-                    font-style: normal;
-                    font-weight: 900;
-                    font-size: 32px;
-                    line-height: 41px;
-                    display: flex;
-                    align-items: center;
-                    text-align: center;
-                    letter-spacing: -0.02em;
-                    color: #FFFFFF;
-                    padding: 145px 94px 123px 94px;
-                }
-                
-                .para2 {
-                    position: absolute;
-                    padding: 123px 94px 173px 94px;
-                    margin: 0;
-                    font-family: Fira Sans;
-                    font-style: normal;
-                    font-weight: bold;
-                    font-size: 11px;
-                    line-height: 13px;
-                    display: flex;
-                    align-items: center;
-                    text-align: center;
-                    letter-spacing: -0.02em;
-                    color: rgba(0, 0, 0, 0.5);
-                    height: 17px;
-                    width: 250px;
-                    left: 20px;
-                    border-radius: nullpx;
-                }
-                
-                .join {
-                    position: absolute;
-                    width: 375px;
-                    height: 315px;
-                    left: 0px;
-                    top: 1039px;
-                    background: #FAB131;
-                }
-                
-                .waiting {
-                    height: 17px;
-                    width: 250px;
-                    left: 62px;
-                    top: 1152px;
-                    border-radius: nullpx;
-                    padding: 100px 63px 0px 90px;
-                }
-                
-                .jointoday {
-                    position: absolute;
-                    width: 250px;
-                    height: 41px;
-                    left: 62px;
-                    font-family: Frank Ruhl Libre;
-                    font-style: normal;
-                    font-weight: 900;
-                    font-size: 32px;
-                    line-height: 41px;
-                    display: flex;
-                    align-items: center;
-                    text-align: center;
-                    letter-spacing: -0.02em;
-                    color: #ffffff;
-                    margin: 0;
-                    padding: 20px 63px 144px 40px;
-                }
-                
-                .mitten {
-                    position: absolute;
+            body {
+                position: absolute;
+                margin: 0;
+            }
+            
+            .hero-bg {
+                background-color: #C7DDEA;
+                position: absolute;
+                width: 375px;
+                height: 724px;
+                padding-top: 20px;
+            }
+            
+            .bg2 {
+                position: absolute;
+                width: 342px;
+                height: 334px;
+                padding: 390px 15px 0px 18px;
+            }
+            
+            .test {
+                /* We´ve got you Covered. */
+                position: absolute;
+                width: 343px;
+                height: 101px;
+                font-family: Frank Ruhl Libre;
+                font-style: normal;
+                font-weight: 900;
+                font-size: 45px;
+                line-height: 100%;
+                /* or 45px */
+                letter-spacing: -0.02em;
+                color: #000000;
+                padding: 71px 15px 552px 17px;
+                border-radius: nullpx;
+                margin: 0;
+            }
+            
+            .para {
+                position: absolute;
+                width: 343px;
+                height: 103px;
+                font-family: Fira Sans;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 24px;
+                padding: 186px 15px 435px 17px;
+                color: rgba(0, 0, 0, 0.6);
+            }
+            
+            .btn {
+                position: absolute;
+                width: 101px;
+                height: 30px;
+                font-family: Fira Sans;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 10px;
+                line-height: 12px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                color: rgba(0, 0, 0, 0.8);
+                position: absolute;
+                width: 131px;
+                height: 39px;
+                background: #FFFFFF;
+                box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
+                border-radius: 100px;
+                margin: 302px 227px 382px 17px;
+                border-style: none;
+            }
+            
+            .test3 {
+                color: white;
+            }
+            
+            .learn {
+                position: absolute;
+                width: 375px;
+                height: 315px;
+                left: 0px;
+                top: 724px;
+                background: #F17949;
+            }
+            
+            .learn-more {
+                font-family: Frank Ruhl Libre;
+                font-style: normal;
+                font-weight: 900;
+                font-size: 32px;
+                line-height: 41px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                letter-spacing: -0.02em;
+                color: #FFFFFF;
+                padding: 145px 94px 123px 94px;
+            }
+            
+            .para2 {
+                position: absolute;
+                padding: 123px 94px 173px 94px;
+                margin: 0;
+                font-family: Fira Sans;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 11px;
+                line-height: 13px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                letter-spacing: -0.02em;
+                color: rgba(0, 0, 0, 0.5);
+                height: 17px;
+                width: 250px;
+                left: 20px;
+                border-radius: nullpx;
+            }
+            
+            .join {
+                position: absolute;
+                display: flex;
+                width: 375px;
+                height: 315px;
+                left: 0px;
+                top: 1039px;
+                background: #FAB131;
+            }
+            
+            .waiting {
+                height: 17px;
+                width: 250px;
+                left: 62px;
+                top: 1152px;
+                border-radius: nullpx;
+                padding: 113px 63px 185px 63px;
+            }
+            
+            .personal {
+                background: #A9A19E;
+                display: flex;
+                position: relative;
+                width: 375px;
+                height: 1580px;
+                left: 0px;
+                top: 1354px;
+            }
+            
+            .jointoday {
+                position: absolute;
+                width: 250px;
+                height: 41px;
+                left: 62px;
+                font-family: Frank Ruhl Libre;
+                font-style: normal;
+                font-weight: 900;
+                font-size: 32px;
+                line-height: 41px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                letter-spacing: -0.02em;
+                color: #ffffff;
+                margin: 0;
+                padding: 130px 63px 144px 62px;
+            }
+            /* .mitten {
+                    position: relative;
                     width: 375px;
                     height: 1580px;
                     left: 0px;
                     top: 1354px;
                     background: #A9A19E;
-                    margin: 0;
-                }
-                
-                .mittenhead {
-                    position: relative;
-                    font-family: Frank Ruhl Libre;
-                    font-style: normal;
-                    font-weight: 900;
-                    font-size: 45px;
-                    line-height: 100%;
-                    /* or 45px */
-                    letter-spacing: -0.02em;
-                    color: #bb1a1a;
-                    padding: -20000px 63px 144px 40px;
-                }
+                } */
+            
+            .mittenhead {
+                position: relative;
+                font-family: Frank Ruhl Libre;
+                font-style: normal;
+                font-weight: 900;
+                font-size: 45px;
+                line-height: 100%;
+                letter-spacing: -0.02em;
+                color: #ffffff;
+                margin: 0;
+                padding: 37px 17px 1403px 16px;
+            }
+            
+            .para3 {
+                position: absolute;
+                width: 343px;
+                height: 237px;
+                left: 16px;
+                font-family: Fira Sans;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 24px;
+                /* or 171% */
+                color: rgba(0, 0, 0, 0.6);
+                padding: 197px 16px 1146px 16px;
+            }
+            
+            .firstbox {
+                position: absolute;
+                display: flex;
+                width: 256px;
+                height: 308px;
+                background: #FFFFFF;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+                border-radius: 5px;
+                margin: 472px 59px 800px 60px;
+            }
+            
+            .childd {
+                position: absolute;
+                width: 236px;
+                height: 150px;
+                left: 70px;
+                top: 1800px;
+                background: #C7DDEA;
+                border-radius: 4px;
+            }
